; ModuleID = '/home/carl/AnghaBench/radare2/libr/bin/p/extr_bin_avr.c_addptr.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/bin/p/extr_bin_avr.c_addptr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [10 x i8] c"vector.%s\00", align 1
@.str.1 = private unnamed_addr constant [11 x i8] c"syscall.%s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*, i32, i32*)* @addptr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @addptr(i32* %0, i8* %1, i32 %2, i32* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32* %3, i32** %8, align 8
  %10 = load i32*, i32** %8, align 8
  %11 = icmp ne i32* %10, null
  br i1 %11, label %12, label %30

12:                                               ; preds = %4
  %13 = load i32*, i32** %8, align 8
  %14 = call i64 @rjmp(i32* %13, i32 0)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %30

16:                                               ; preds = %12
  %17 = load i32*, i32** %5, align 8
  %18 = load i8*, i8** %6, align 8
  %19 = call i32 @sdb_fmt(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i8* %18)
  %20 = load i32, i32* %7, align 4
  %21 = call i32 @addsym(i32* %17, i32 %19, i32 %20)
  %22 = load i32, i32* %7, align 4
  %23 = load i32*, i32** %8, align 8
  %24 = call i32 @rjmp_dest(i32 %22, i32* %23)
  store i32 %24, i32* %9, align 4
  %25 = load i32*, i32** %5, align 8
  %26 = load i8*, i8** %6, align 8
  %27 = call i32 @sdb_fmt(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.1, i64 0, i64 0), i8* %26)
  %28 = load i32, i32* %9, align 4
  %29 = call i32 @addsym(i32* %25, i32 %27, i32 %28)
  br label %30

30:                                               ; preds = %16, %12, %4
  ret void
}

declare dso_local i64 @rjmp(i32*, i32) #1

declare dso_local i32 @addsym(i32*, i32, i32) #1

declare dso_local i32 @sdb_fmt(i8*, i8*) #1

declare dso_local i32 @rjmp_dest(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
